fix: scrollbar width and color

--- a/src/styles/_scrollbar.css
+++ b/src/styles/_scrollbar.css
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar {
-  width: 0.8rem;
+  width: 1rem;
   height: 0.8rem;
 }
 
@@ -10,10 +10,10 @@
 
 ::-webkit-scrollbar-thumb {
   border-radius: 0.4rem;
-  background: #9b9b9b;
+  background: var(--lightgreen);
   transition: all 0.1s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #b0b0b0;
+  background: var(--green);
 }
